fix: image blurry

--- a/src/assets/scss/_steps.scss
+++ b/src/assets/scss/_steps.scss
@@ -289,6 +289,19 @@
   }
   .steps-title {
     margin-bottom: 5.25rem;
+  }
+}
+
+#step-4 {
+  .steps-title {
+    img {
+      width: 4.5rem;
+    }
+  }
+}
+
+#step-5 {
+  .steps-title {
     img {
       width: 8.75rem;
     }
